--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -121,7 +121,7 @@ h2 {
 
 .sec1 {
     background-image: url(../img/sec1.jpg);
-    height: 960px;
+    min-height: 960px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
@@ -215,7 +215,7 @@ h2 {
             color: #1A1917;
             background: linear-gradient(194.68deg, #FFB548 11.27%, #F3AF34 90.4%);
             border-radius: 4px;
-            
+
 
             span {
                 padding-left: 10px;
@@ -237,7 +237,107 @@ h2 {
             line-height: 22px;
             text-transform: uppercase;
             color: #fff;
-            background-color: transparent;           
+            background-color: transparent;
         }
     }
+}
+
+.sec2 {
+    background-image: url(../img/sec2.jpg);
+    min-height: 960px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    .block-inner {
+        .dflex;
+        padding-top: 200px;
+
+        .block-text {
+            padding-left: 120px;
+            padding-top: 55px;
+
+            .t1 {
+                font-family: 'Bebas Neue', sans-serif;
+                font-weight: bold;
+                font-size: 24px;
+                line-height: 24px;
+                letter-spacing: 2px;
+                color: #fff;
+            }
+
+            .t2 {
+                padding: 10px 0 70px;
+                font-family: 'Bebas Neue', sans-serif;
+                font-weight: bold;
+                font-size: 80px;
+                line-height: 80px;
+                letter-spacing: 3px;
+                text-transform: uppercase;
+                color: #FFF;
+                position: relative;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    border: 2px solid #fff;
+                    border-radius: 4px;
+                    width: 711px;
+                    bottom: 61px;
+                }
+            }
+
+            .text {
+                margin-left: 190px;
+                width: 374px;
+                font-size: 18px;
+                line-height: 22px;
+                color: #fff;
+                word-spacing: 2px;
+
+                span {
+                    font-weight: 700;
+
+                    &:last-child {
+                        font-weight: 400;
+                        text-transform: underline;
+                        border-bottom: 4px solid #FFB548;
+                    }
+                }
+            }
+
+        }
+
+        .block-slider {
+            margin-left: 15px;
+            img {
+                max-width: 502px;
+                max-height: 610px;
+            }
+
+        }
+
+    }
+
+
+
+
+
+}
+
+.sec3 {
+    background-image: url(../img/sec3.jpg);
+    height: 960px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-top: -92px;
+}
+
+.sec4 {
+    background-image: url(../img/sec4.jpg);
+    height: 960px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
